Add Javadoc for ProductivityCalculationService and solve some of the Sonar issues